# SimpleBluetoothLowEnergySocket

./: CMakeLists.txt  FindDBus.cmake  FindReadline.cmake  README.md
examples/central/: CMakeLists.txt  main.cpp
examples/client/: CMakeLists.txt  main.cpp
examples/scanner/: CMakeLists.txt  main.cpp
examples/server/: CMakeLists.txt  main.cpp
libBLE/: BLE.cpp  BLE.h  BLEAdapter.cpp  BLEAdapter.h  BLEAdapterRemovedException.cpp  BLEAdapterRemovedException.h  BLEAdvertisement.cpp  BLEAdvertisement.h  BLEAdvertisment.cpp  BLEAdvertisment.h  BLECentral.cpp  BLECentral.h  BLEConnection.cpp  BLEConnection.h  BLEController.cpp  BLEController.h  BLEDevice.cpp  BLEDevice.h  BLEGattCharacteristic.cpp  BLEGattCharacteristic.h  BLEGattDescriptor.cpp  BLEGattDescriptor.h  BLEGattService.cpp  BLEGattService.h  BLENUSConnection.cpp  BLENUSConnection.h  BLEPeripheral.cpp  BLEPeripheral.h  BLEScanner.cpp  BLEScanner.h  CMakeLists.txt  enum.h  infix_iterator.h  safe_flag.h
libBLE/gdbus/: .gitignore  CMakeLists.txt
libBLE/helper/: Observer.h  ValueObserver.h
libBLE/proxy/: AdapterEnums.h  AdapterProxy.cpp  AdapterProxy.h  CharacteristicEnum.h  CharacteristicProxy.cpp  CharacteristicProxy.h  DescriptorEnum.h  DescriptorProxy.cpp  DescriptorProxy.h  DeviceProperty.h  DeviceProxy.cpp  DeviceProxy.h  Proxy.cpp  Proxy.h  ServiceEnum.h  ServiceProxy.cpp  ServiceProxy.h
libBLE/proxy/dbus/: BLEDBusConnection.cpp  BLEDBusConnection.h  ConnectDevice.cpp  ConnectDevice.h  DisconnectDevice.cpp  DisconnectDevice.h  ReadValue.cpp  ReadValue.h  RemoveDevice.cpp  RemoveDevice.h  StartDiscovery.cpp  StartDiscovery.h  StartNotify.cpp  StartNotify.h  StopNotify.cpp  StopNotify.h  WriteValue.cpp  WriteValue.h  getsetdbusvalue.cpp  getsetdbusvalue.h  parserrorname.cpp  parserrorname.h
tests/adapter/: CMakeLists.txt  main.cpp
tests/device/: CMakeLists.txt  main.cpp
tests/watcher/: CMakeLists.txt  main.cpp
